--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,24 +9,51 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
 
-        <ImageView
-            android:id="@+id/settings"
-            android:src="@drawable/settings30"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <include
+            layout="@layout/toolbar"
+            android:id="@+id/toolbar"
+            />
 
-        <TextView
-            android:id="@+id/tvTimer"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:gravity="right"
-            android:text=""
-            android:textSize="22dp" />
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/tvLatitude"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:gravity="left"
+                android:text=""
+                android:textSize="22dp" />
+            <TextView
+                android:id="@+id/tvLongitude"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_gravity="left"
+                android:gravity="left"
+                android:text=""
+                android:textSize="22dp" />
+
+
+            <TextView
+                android:id="@+id/tvTimer"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:text=""
+                android:textSize="22dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
